# ipo-feedback-skill

./: .gitignore  README.md  pyproject.toml
ipo_feedback/: __init__.py  analyzer.py  cleanup.py  cli.py  config.py  downloader.py  models.py  parser.py  prospectus.py
ipo_feedback/exchanges/: __init__.py  base.py  bse.py  sse.py  szse.py
